2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Makefile.am, Mono.Addins.Gui.mdp: Sign the assembly.
	* Mono.Addins.Gui/AddinInstallerDialog.cs: Added missing (C) header.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs:
	  Updated.
	* gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs, gtk-gui/gui.stetic,
	  Mono.Addins.Gui/AddinInstaller.cs,
	  Mono.Addins.Gui/AddinInstallerDialog.cs: Added an implementation of
	  IAddinInstaller.
	* Makefile.am, Mono.Addins.Gui.mdp: Added new files.
	* Mono.Addins.Gui/AddinInstallDialog.cs: Don't include markup in
	  translatable strings.

2007-05-25  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic:
	  Updated.
	* Mono.Addins.Gui/AddinManagerDialog.cs: Handle exceptions thrown when
	  enabling/disabling add-ins.

2007-05-10  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic:
	  Updated.
	* Mono.Addins.Gui/NewSiteDialog.cs,
	  Mono.Addins.Gui/ManageSitesDialog.cs,
	  Mono.Addins.Gui/AddinManagerWindow.cs, Mono.Addins.Gui/Services.cs,
	  Mono.Addins.Gui/AddinInstallDialog.cs,
	  Mono.Addins.Gui/ErrorDialog.cs,
	  Mono.Addins.Gui/AddinManagerDialog.cs: Properly destroy all
	  dialogs.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also