@@ -157,7 +157,7 @@ namespace Mono.Addins.Gui {
             w10.Spacing = 2;
             // Container child GtkHBox.Gtk.Container+ContainerChild
             Gtk.Image w11 = new Gtk.Image();
-            w11.Name = "image1";
+            w11.Name = "image5";
             w11.Pixbuf = Stetic.IconLoader.LoadIcon("gtk-add", 20);
             w10.Add(w11);
             // Container child GtkHBox.Gtk.Container+ContainerChild
@@ -206,7 +206,7 @@ namespace Mono.Addins.Gui {
             w21.Spacing = 2;
             // Container child GtkHBox1.Gtk.Container+ContainerChild
             Gtk.Image w22 = new Gtk.Image();
-            w22.Name = "image2";
+            w22.Name = "image6";
             w22.Pixbuf = Stetic.IconLoader.LoadIcon("gtk-remove", 20);
             w21.Add(w22);
             // Container child GtkHBox1.Gtk.Container+ContainerChild
@@ -236,7 +236,7 @@ namespace Mono.Addins.Gui {
             w30.Spacing = 2;
             // Container child GtkHBox2.Gtk.Container+ContainerChild
             Gtk.Image w31 = new Gtk.Image();
-            w31.Name = "image3";
+            w31.Name = "image7";
             w31.Pixbuf = Stetic.IconLoader.LoadIcon("gtk-yes", 20);
             w30.Add(w31);
             // Container child GtkHBox2.Gtk.Container+ContainerChild
@@ -266,7 +266,7 @@ namespace Mono.Addins.Gui {
             w39.Spacing = 2;
             // Container child GtkHBox3.Gtk.Container+ContainerChild
             Gtk.Image w40 = new Gtk.Image();
-            w40.Name = "image4";
+            w40.Name = "image8";
             w40.Pixbuf = Stetic.IconLoader.LoadIcon("gtk-no", 20);
             w39.Add(w40);
             // Container child GtkHBox3.Gtk.Container+ContainerChild
